Updated Teacher Dashboard features